deploy/podinfo-dep.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: podinfo
  namespace: dev
#  annotations:
#    flux.weave.works/automated: 'true'
spec:
  replicas: 4
  selector:
    matchLabels:
      app: podinfo
  template:
    metadata:
      labels:
        app: podinfo
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      containers:
      - name: podinfod
        image: quay.io/brice/metrics-demo:v4-subscription-service
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /info
            port: 3000
          initialDelaySeconds: 1
          periodSeconds: 5
          failureThreshold: 1
        livenessProbe:
          httpGet:
            path: /info
            port: 3000
          initialDelaySeconds: 1
          periodSeconds: 10
          failureThreshold: 2
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
